--- a/index.html
+++ b/index.html
@@ -47,43 +47,23 @@
           <footer>
             <a
               href="#banner"
+              id="bannerButton"
               class="scrolly"
             >
-              Meet Bruce
-              <svg>
-                <polygon></polygon>
+              <svg
+                viewbox="0 0 400 200"
+                xmlns="http://www.w3.org/2000/svg"
+                width="400px"
+                height="200px"
+              >
+                <polygon
+                  points="0,0 200,75 400,0 400,125 200,200 0,125"
+                ></polygon>
               </svg>
+              <span>Meet Bruce</span>
             </a>
           </footer>
         </div>
-
-        <!-- Nav -->
-        <nav id="nav">
-          <ul>
-            <li><a href="index.html">Home</a></li>
-            <li>
-              <a href="#">Dropdown</a>
-              <ul>
-                <li><a href="#">Lorem ipsum dolor</a></li>
-                <li><a href="#">Magna phasellus</a></li>
-                <li><a href="#">Etiam dolore nisl</a></li>
-                <li>
-                  <a href="#">And a submenu &hellip;</a>
-                  <ul>
-                    <li><a href="#">Lorem ipsum dolor</a></li>
-                    <li><a href="#">Phasellus consequat</a></li>
-                    <li><a href="#">Magna phasellus</a></li>
-                    <li><a href="#">Etiam dolore nisl</a></li>
-                  </ul>
-                </li>
-                <li><a href="#">Veroeros feugiat</a></li>
-              </ul>
-            </li>
-            <li><a href="left-sidebar.html">Left Sidebar</a></li>
-            <li><a href="right-sidebar.html">Right Sidebar</a></li>
-            <li><a href="no-sidebar.html">No Sidebar</a></li>
-          </ul>
-        </nav>
       </div>
 
       <!-- Banner -->
@@ -94,7 +74,7 @@
             <div class="col-6 col-12-mobile">
               <h2>Hi. I'm Bruce.</h2>
               <p>
-                I make amazing custom homes in Gas City, Upland, and Hartford
+                I build beautiful custom homes in Gas City, Upland, and Hartford
                 City Indiana.
               </p>
             </div>
